Fixed window alignment issue

--- a/src/components/Visualization/Visualization.css
+++ b/src/components/Visualization/Visualization.css
@@ -19,6 +19,8 @@
 
 .visualizationImage{
     display: block;
+    height: auto;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
 }
